welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:12: error: not found: value baissebrosse
  baissebrosse()
  ^PatternPicture:13: error: not found: value levebrosse
  levebrosse()
  ^